@@ -4,7 +4,7 @@ import com.sap.cloud.security.config.ClientIdentity;
 import com.sap.cloud.security.token.Token;
 import com.sap.cloud.security.xsuaa.client.*;
 
-import javax.annotation.Nonnull;
+import jakarta.annotation.Nonnull;
 import java.util.*;
 
 import static com.sap.cloud.security.xsuaa.Assertions.assertNotNull;
@@ -182,7 +182,7 @@ public class JwtBearerTokenFlow {
 							bearerToken, optionalParameters, disableCache, xZid);
 		} catch (OAuth2ServiceException e) {
 			throw new TokenFlowException(
-					String.format("Error requesting user token with grant_type '%s': %s",
+					"Error requesting user token with grant_type '%s': %s".formatted(
 							OAuth2TokenServiceConstants.GRANT_TYPE_JWT_BEARER, e.getMessage()),
 					e);
 		}
